# Unsharp_Mask

./: .gitattributes  .gitignore  Benchmarking.xlsx  CMakeLists.txt  Documentation_Notes.txt  Questions.txt  README.md  add_weighted.cl  blur.cl  blur.hpp  unsharp_mask.cpp  unsharp_mask.hpp
dependencies/opencl-headers-msvc/CL/: cl.hpp
dependencies/opencl-lib/: OpenCL.lib  notes.md
docs/: Unsharp-Mask-Report.docx
headers/: ppm.hpp
images/goldhill/: goldhill-in.7z
sources/: blur.cl  unsharp_mask.cpp
